[tool.poetry]
name = "webscraper"
version = "0.1.0"
description = ""
authors = ["redxzeta <xzetanzero@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
selenium = "^3.141.0"
beautifulsoup4 = "^4.9.3"
numpy = "=1.19.3"
pandas = "^1.1.4"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
